--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.6.0",
     "react-native-swipe-cards-deck": "^0.3.0",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "realm": "^10.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
